Se pulen un poco más los estilos

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
   <main>
     <!--Contendor de mensajes-->
     <section id="messageContainer" class="messageContainer">
+      <!--Contenido generado dinámicamente-->
       <div class="left">
-        <p>Tu respuesta por el pequeño chat</p>
-      </div>
-      <div class="right">
-        <p>Tu pregunta al pequeño chat que es muuuuuuuuy larga</p>
+        <p>Pregunta algo, anda!
+        </p>
       </div>
     </section>
 
